[package]
name = "tda-rtti"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
windows = { version = "0.62.2", features = [
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading"
] }

[lints.clippy]
style = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"
